# advent-of-code

./: .gitignore  README.md  flake.nix  pyproject.toml
advent_of_code/: __init__.py
advent_of_code/notebooks/: 2022.ipynb  2023.ipynb
advent_of_code/utils/: __init__.py  aoc.py  jupyter.py
data/: tokens.txt.example
