[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["akiiino <aoc@akiiino.me>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
requests = "^2.28.1"
jupyter = "^1.0.0"
numpy = "^1.23.5"
more-itertools = "^9.0.0"
matplotlib = "^3.6.2"
sympy = "^1.11.1"
scipy = "^1.9.3"
jupyter-spaces = "^0.3.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["pydocstyle", "rope"], version = "^1.6.0"}
black = "^22.12.0"
python-lsp-black = "^1.2.1"
pyls-isort = "^0.2.2"
mypy-ls = "^0.5.1"
pyls-flake8 = "^0.4.0"
types-requests = "^2.28.11.5"
flake8-pyproject = "^1.2.2"

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
